@@ -95,8 +95,6 @@ void syserror(const char *message);
 
 // Function for processing -r option in smartctl and smartd
 int split_report_arg(char *s, int *i);
-// Function for processing -c option in smartctl and smartd
-int split_report_arg2(char *s, int *i);
 
 // Function for processing -t selective... option in smartctl
 int split_selective_arg(char *s, uint64_t *start, uint64_t *stop, int *mode);
